# cs442-MPI-IO-Tutorials

./: CMakeLists.txt  LICENSE  README.md  compile.sh
C/: create_input.cpp  reading_main.cpp  reading_solution.cpp  writing_main.cpp  writing_solution.cpp
examples/: CMakeLists.txt  example_reading.cpp  example_writing.cpp
src/: CMakeLists.txt  src.cpp  src.hpp
src/test/: CMakeLists.txt
src/tests/: CMakeLists.txt  test_reading.cpp  test_reading_continuosly.cpp  test_reading_offsets.cpp  test_reading_remainder.cpp  test_writing.cpp
